Bug 98984 - Mailmerge ignores 'Exchange database'
Summary: Mailmerge ignores 'Exchange database'
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.2.0.1 rc
Hardware: x86-64 (AMD64) Linux (All)
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:5.3.0
Keywords: regression
Depends on:
Blocks:
 
Reported: 2016-03-30 13:49 UTC by Oliver Specht (CIB)
Modified: 2016-10-25 18:40 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
After changing database the old one continue to be visible (53.67 KB, image/png)
2016-07-18 20:13 UTC, royerjy
Details
ExampleLetterWithPicturesDatabaseExchangeForm (357.99 KB, application/xml)
2016-07-29 16:38 UTC, royerjy
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Specht (CIB) 2016-03-30 13:49:56 UTC
- run & finish mail merge wizard
- remove the inserted database fields, insert fields using a different database, call Edit/Exchange Database and assign the new database
-> call any function from the mail merge toolbar or the wizard uses the old database
Comment 1 Jan Holesovsky 2016-04-08 10:21:30 UTC
Yeah, would be useful if the operations like Edit/Exchange Database and assign the new database would ask if the user wants to update the current mailmerge, or not...
Comment 2 royerjy 2016-06-27 21:02:45 UTC
With 5.2.0.1 on Linux I have something identical. Not all fields are moved to new database and a list of 2 databases is kept in left column. I recreated all mail merge fields and I do not understand why some keep the old database when using Exchange database.
Comment 3 royerjy 2016-07-18 20:13:05 UTC
Created attachment 126289 [details]
After changing database the old one continue to be visible

With French 5.2.0 rc2 on Linux, after changing database the old one continue to appeared and mailmerge don't works correctly. It is necessary to repeat the operation once again to change the database.

LibO crash frequently when closing the document.
Comment 4 Commit Notification 2016-07-26 15:22:38 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=adf874c7cc21aedd29286d2ca860b4fd201f87d2

Resolves: tdf#98984 make MailMerge listen for database change

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Caolán McNamara 2016-07-26 15:27:35 UTC
The original comment #1 and title complain that the mail merge toolbar doesn't know when the database has changed via exchange database and re-sets the original one again.

The above commit attempts to fix that and seems to work fine for me. I'd appreciate if the actual mail merge guys on cc could check that nothing they need has gotten broken by this.

Comment #1 could be implemented by adding a query dialog in updateCurrentDBDataFromDocument or before the call of that, but isn't implemented here.

Comment #2 added "regression" keyword, and described something which might not exactly be the same original problem as originally reported by OS and may not be addressed by this commit.
Comment 6 royerjy 2016-07-29 16:38:32 UTC
Created attachment 126470 [details]
ExampleLetterWithPicturesDatabaseExchangeForm

I made few tests with today's master 3.0.0 alpha on Mageia. The bug continue to exist as showed in attached document.

During this tests I don't have hang of LiBo.