Resolves: tdf#98984 make MailMerge listen for database change

and update to take the new database set on the document instead of
retaining the initial database

note that now SetCurrentDBData also throws away the old m_xResultSet to force a
new one to be fetched

Change-Id: Id50287915064949296ee73211e16bbba46ced229